package com.hb.cda.elec_business.entity;

public enum BookingStatus {
    PENDING, CONFIRMED, CANCELLED, COMPLETED, EXPIRED
}
