package com.hb.cda.elec_business.entity;

public enum PaymentStatus {
    CREATED,
    PENDING,
    SUCCEEDED,
    FAILED,
    REFUNDED,
    CANCELED
}
