package com.hb.cda.elec_business.entity;

public enum RoleName {
    USER,
    OWNER,
    ADMIN
}
